fix 3d spline velocity profiles